--- a/NIVEL 1/Level1_RPADeveloperBasicTraining/Practices/Main.xaml
+++ b/NIVEL 1/Level1_RPADeveloperBasicTraining/Practices/Main.xaml
@@ -126,7 +126,7 @@
                             <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" TimeoutMS="{x:Null}" Selector="&lt;webctrl aaname='Tutorial RPA' isleaf='1' parentid='mG61Hd' tag='DIV' /&gt;" WaitForReady="INTERACTIVE" />
                           </ui:Highlight.Target>
                         </ui:Highlight>
-                        <ui:TypeInto DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" Activate="True" ClickBeforeTyping="False" DisplayName="Type Into 'chrome.exe Chrome'" EmptyField="False" sap:VirtualizedContainerService.HintSize="314,96" sap2010:WorkflowViewState.IdRef="TypeInto_1" SendWindowMessages="False" SimulateType="True" Text="[(row(“Nombre”).ToString).Trim+&quot;[k(enter)]&quot;]">
+                        <ui:TypeInto DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" Activate="True" ClickBeforeTyping="False" DisplayName="Type Into 'chrome.exe Chrome'" EmptyField="False" sap:VirtualizedContainerService.HintSize="314,96" sap2010:WorkflowViewState.IdRef="TypeInto_1" SendWindowMessages="False" SimulateType="False" Text="[(row(“Nombre”).ToString).Trim]">
                           <ui:TypeInto.Target>
                             <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" TimeoutMS="{x:Null}" Selector="[vNombreInput]" WaitForReady="INTERACTIVE" />
                           </ui:TypeInto.Target>
